dark mode fix and banner added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
+
 :root {
   --dark: #e8e6e3;
   --darkLighter: #dadada;
   --light: #181a1b;
   --lightDarker: #746463;
   --accentRgb: 0,24,204;
+  --accent: rgb(0,24,204);
+  --shadowColor: rgba(0,0,0,.35);
 
 }
-}
+
 
 
 @media (prefers-color-scheme: dark) {
@@ -21,7 +23,7 @@
     --light: #e8e6e3;
     --lightDarker: #848484;
     --accent: #67fd67;
-
+    --shadowColor: rgba(0,0,0,.75);
 }
 }
 
